--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+    "./dtd/xhtml11-flat.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.w3.org/1999/xhtml
@@ -51,9 +51,11 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-<!--http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html-->
+  <li style="margin-bottom: 1ex;">F* tutorial at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
+  </li>
+  <li style="margin-bottom: 1ex;"><a href="http://2015.ecoop.org/event/plas-2015-papers-micro-policies-formally-verified-tag-based-security-monitors">Invited talk on Micro-Policies</a> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>, 6 July 2015
+  </li>
   <li style="margin-bottom: 1ex;"><!-- <a href="http://people.csail.mit.edu/adamc/cpp16/"> -->Certified Programs and Proofs, CPP 2016<!-- </a> --> (PC member)</li>
-
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a>, Lecture, Saarland University, 16-27 March 2015
   </li>
   <li style="margin-bottom: 1ex;">
@@ -94,7 +96,7 @@ Research Cambridge</a>.</p>
 <p><i>Office:</i> <strong>#31</strong> (5th floor)</p>
 
 
-<h2 id="students">Current Research Projects</h2>
+<h2 id="new-students">Current Research Projects</h2>
 <p style="width:42em; text-align: left">
 <!--
 <h2 id="students">Searching for Students</h2>
@@ -158,6 +160,7 @@ MPRI website</a>.</p>
   My research is primarily focused on <em>developing rigorous formal
     techniques for solving security problems</em>. I am
     particularly interested in:
+</p>
   <ul style="width:42em; text-align: left">
     <li style="margin-bottom: 1ex;">
       <em>formal methods for computer and network security</em>:
@@ -186,7 +189,6 @@ MPRI website</a>.</p>
       embedded systems,
       etc.</li>
   </ul>
-</p>
 
 <h2>Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
@@ -307,7 +309,7 @@ MPRI website</a>.</p>
     <li><a href="publications/rcf-and-or-coq-tosca2011-post.pdf">Preliminary version</a> appeared in <a href="http://www.avantssar.eu/arspa-wits11/">Theory of Security and Applications (TOSCA'11)</a>, Invited paper, April 2011.</li>
     <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#355;cu, February 2011.</li>
     <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#355;cu, November 2010.</li>
-<x!--    <li>A <a href="publications/zk-rcf-fcs2009.pdf">very preliminary version</a> of this work was presented at <a href="http://www.loria.fr/~cortier/FCS09/">FCS'09</a>, August 2009.</li>--x>
+<!-x-    <li>A <a href="publications/zk-rcf-fcs2009.pdf">very preliminary version</a> of this work was presented at <a href="http://www.loria.fr/~cortier/FCS09/">FCS'09</a>, August 2009.</li>-x->
   </ul>
   </li>
 -->
@@ -319,11 +321,16 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</em>
+  <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
+
+      <li><b>Upcoming: </b>Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a> (2015-07-06)</li>
+
+      <li><b>Upcoming: </b> <a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes Seminar on Formal Methods and Security</a> (2015-06-19)</li>
+
       <li>HP Labs - Inria seminar: <a href="talks/Micro-Policies-HP-Inria.pdf">slides</a> (2015-05-21)</li>
-      <li>Inria Prosecco evaluation</a>: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
-      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a>: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
+      <li>Inria Prosecco evaluation: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
+      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">FCS-FCC</a>: <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-2014-07-18.html#talk:2906">abstract</a>, <a href="http://software.imdea.org/~bkoepf/FCS-FCC14/paper%206.pdf">extended abstract</a>, <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
@@ -341,14 +348,6 @@ MPRI website</a>.</p>
       <li><a href="http://www.maximedenes.fr/">Maxime Dénès</a> presented this at the <a href="http://www.easychair.org/smart-program/VSL2014/Coq-program.html#talk:1091">Coq Workshop</a>: <a href="talks/coq6_submission_4.pdf">abstract</a>,  <a href="talks/QuickChick-Coq.pdf">slides</a>, <a href="https://github.com/lemonidas/QuickChick/blob/master/Tests.v">code</a> (2014-07-18)</li>
       <li><a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
       <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Testing Noninterference, Quickly</em>
-    <ul style="font-size: small">
-      <li><a href="http://csf2013.seas.harvard.edu/">Short talk at IEEE 26th
-Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.pdf">slides</a> (2013-06-27)</li>
-      <li><a href="http://securitylunch.com/">Stanford Security Lunch</a>: <a href="talks/testing-noninterference-stanford.pdf">slides</a> (2013-05-15)</li>
     </ul>
   </li>
 
@@ -447,7 +446,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
   </li>
 </ul>
 
-<h2 id="old-students">Advised Students</h2>
+<h2 id="students">Advised Students</h2>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/yjugl">Yannis Juglaret</a>
@@ -586,7 +585,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 </ul>
 
 <!-- Google analytics code -->
-<script>
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
