--- a/talks.html
+++ b/talks.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+    "./dtd/xhtml11-flat.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.w3.org/1999/xhtml
@@ -74,8 +74,6 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
       <li><a href="http://www.infsec.cs.uni-saarland.de/">Prosecco team at Inria Paris-Rocquencourt</a>: <a href="talks/crash-safe-inria.pdf">slides</a> (2013-01-04)</li>
       <li><a href="http://www.infsec.cs.uni-saarland.de/">InfSec group at Saarland University</a>: <a href="talks/crash-safe-infsec.pdf">slides</a> (2012-12-18)</li>
       <li><a href="http://www.ec-spride.tu-darmstadt.de/ec-spride/">EC SPRIDE at TU Darmstadt</a>: <a href="talks/crash-safe-darmstadt.pdf">slides</a> (2012-12-18)</li>
-    </ul>
-    <ul style="font-size: small">
     </ul>
   </li>
 
@@ -244,7 +242,7 @@ Computer Security Foundations Symposium</a>: <a href="talks/picopaper-csf-short.
 </ul>
 
 <!-- Google analytics code -->
-<script>
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
