--- a/index.html
+++ b/index.html
@@ -321,12 +321,22 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;"><em>F* tutorial</em>
+    <ul style="font-size: small">
+
+      <li><b>Upcoming:</b> <a href="http://cufp.org/2015/">
+                           CUFP 2015</a> (2015-09-04)</li>
+
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
 
-      <li><b>Upcoming: </b>Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a> (2015-07-06)</li>
+      <li><b>Upcoming:</b> Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a> (2015-07-06)</li>
 
-      <li><b>Upcoming: </b> <a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes Seminar on Formal Methods and Security</a> (2015-06-19)</li>
+      <li><b>Upcoming:</b> <a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes Seminar on Formal Methods and Security</a> (2015-06-19)</li>
 
       <li>HP Labs - Inria seminar: <a href="talks/Micro-Policies-HP-Inria.pdf">slides</a> (2015-05-21)</li>
       <li>Inria Prosecco evaluation: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
