--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@ MPRI website</a>.</p>
     <ul style="font-size: small">
 
       <li><b>Upcoming:</b> <a href="http://cufp.org/2015/">
-                           CUFP 2015</a> (2015-09-04)</li>
+          Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
+      </li>
 
     </ul>
   </li>
