--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><!-- <a href="http://people.csail.mit.edu/adamc/cpp16/"> -->Certified Programs and Proofs, CPP 2016<!-- </a> --> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a>, Lecture, Saarland University, 16-27 March 2015
   </li>
+<!--
   <li style="margin-bottom: 1ex;">
   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
   January 2015 
@@ -65,7 +66,6 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;">
    <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a>, November 2014 (main organizer)
   </li>
-<!--
   <li style="margin-bottom: 1ex;">
    <a href="http://www.crash-safe.org/">CRASH/SAFE project</a> covered by <a href="http://www.sueddeutsche.de/digital/forschungsprojekt-crash-safe-von-null-auf-sicherheit-1.1970422">article in Süddeutsche Zeitung</a> <br/>(translation: <a href="https://www.duolingo.com/translation/e8956a3492f4308fc1090f17cb7a866d">part1</a>, <a href="https://www.duolingo.com/translation/a30a412b5218c0d8fe8471a06853155b">part2</a>)
   </li>
@@ -327,6 +327,13 @@ MPRI website</a>.</p>
 
       <li><b>Upcoming:</b> <a href="http://cufp.org/2015/">
           Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
+      </li>
+
+      <li><a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
+      </li>
+
+      <li><a href="http://popl.mpi-sws.org/2015/tutorials2.html#t2">
+          Symposium on Principles of Programming Languages (POPL)</a> (2015-01-13)
       </li>
 
     </ul>
