--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,23 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>F* tutorial</em>
+    <ul style="font-size: small">
+
+      <li><b>Upcoming:</b> <a href="http://cufp.org/2015/">
+          Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
+      </li>
+
+      <li><a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
+      </li>
+
+      <li><a href="http://popl.mpi-sws.org/2015/tutorials2.html#t2">
+          Symposium on Principles of Programming Languages (POPL)</a> (2015-01-13)
+      </li>
+
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>A Coq Framework For Verified Property Based Testing</em>
     <ul style="font-size: small">
       <li><a href="">CoqPL Workshop</a>: <a href="talks/QuickChick-Verified-Testing-CoqPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/semGen/examples/RedBlack">code</a> (2015-01-18)</li>
