--- a/talks.html
+++ b/talks.html
@@ -41,6 +41,20 @@
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
+    <ul style="font-size: small">
+
+      <li><b>Upcoming:</b> Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a> (2015-07-06)</li>
+
+      <li><b>Upcoming:</b> <a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes Seminar on Formal Methods and Security</a> (2015-06-19)</li>
+
+      <li>HP Labs - Inria seminar: <a href="talks/Micro-Policies-HP-Inria.pdf">slides</a> (2015-05-21)</li>
+      <li>Inria Prosecco evaluation: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
+      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">FCS-FCC</a>: <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-2014-07-18.html#talk:2906">abstract</a>, <a href="http://software.imdea.org/~bkoepf/FCS-FCC14/paper%206.pdf">extended abstract</a>, <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
+      <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>A Coq Framework For Verified Property Based Testing</em>
     <ul style="font-size: small">
       <li><a href="">CoqPL Workshop</a>: <a href="talks/QuickChick-Verified-Testing-CoqPL.pdf">slides</a>, <a href="https://github.com/QuickChick/QuickChick/tree/semGen/examples/RedBlack">code</a> (2015-01-18)</li>
@@ -54,13 +68,6 @@
       <li><a href="http://www.maximedenes.fr/">Maxime Dénès</a> presented this at the <a href="http://www.easychair.org/smart-program/VSL2014/Coq-program.html#talk:1091">Coq Workshop</a>: <a href="talks/coq6_submission_4.pdf">abstract</a>,  <a href="talks/QuickChick-Coq.pdf">slides</a>, <a href="https://github.com/lemonidas/QuickChick/blob/master/Tests.v">code</a> (2014-07-18)</li>
       <li><a href="http://www.pps.univ-paris-diderot.fr/gdt-types-realisabilite/">Coq Working Group @ PPS</a>: <a href="talks/QuickChick-PPS.pdf">slides</a> (2014-03-19)</li>
       <li>Inria Prosecco reading group: <a href="talks/property-based-testing-prosecco.pdf">slides</a>, <a href="talks/property-based-testing-prosecco-code.zip">code</a> (2013-11-29)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Micro-Policies: A Framework for Verified, Tag-Based Security Monitors</em>
-    <ul style="font-size: small">
-      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">Joint Workshop on Foundations of Computer Security and Formal and Computational Cryptography (FCS-FCC)</a>: <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
-      <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
 
