--- a/talks.html
+++ b/talks.html
@@ -24,7 +24,7 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>F* tutorial</em>
+  <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a></em>
     <ul style="font-size: small">
 
       <li><b>Upcoming:</b> <a href="http://cufp.org/2015/">
