--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@ MPRI website</a>.</p>
       (January 2013)
 -->
   </li>
+  <li><a href="https://github.com/catalin-hritcu">My Github account</a></li>
   <li><a href="http://hritcu.wordpress.com">My blog (Smiling)</a></li>
   <li>Pronouncing my name: /kətəlin hritsku/, <a href="sound/catalin_hritcu.mp3">mp3</a>, <a href="sound/catalin_hritcu.aiff">aiff</a></li>
     <li>Spelling my name in LaTeX: <code>C\u{a}t\u{a}lin Hri\c{t}cu</code></li>
