--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
-    <b><a href="publications/foundational-pbt.pdf">Foundational Property-Based Testing</a></b>.
-    Submitted to ITP 2015. Draft of March 2015.
+    <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
+    To appear in ITP 2015. Report of June 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
