--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,12 @@
 <h3>Conference Papers</h3>
 <ol start="5" style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+    Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
+    Leonidas Lampropoulos, and Benjamin C. Pierce.
+    <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
+    To appear in ITP 2015. Report of June 2015.
+  </li>
 
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
