--- a/publications.html
+++ b/publications.html
@@ -262,7 +262,22 @@
 <!--
 -->
 <h3>Drafts</h3>
-<ol start="25" style="width:42em; text-align: left">
+<ol start="26" style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+    Nikhil Swamy,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Chantal Keller,
+    Pierre-Yves Strub,
+    Aseem Rastogi,
+    Antoine Delignat-Lavaud,
+    Karthikeyan Bhargavan, and
+    C&eacute;dric Fournet.
+    <b><a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></b>.
+    <!-- Submitted to ICFP 2015. -->
+    Draft of March 2015.
+  </li>
+
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
     Leonidas Lampropoulos,
     Antal Spector-Zabusky,
