--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">F* tutorial at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
+  <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://2015.ecoop.org/event/plas-2015-papers-micro-policies-formally-verified-tag-based-security-monitors">Invited talk on Micro-Policies</a> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>, 6 July 2015
   </li>
