--- a/index.html
+++ b/index.html
@@ -321,6 +321,13 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Secure Compilation Using Micro-Policies</em>
+    <ul style="font-size: small">
+
+      <li><b>Upcoming:</b> Talk by Yannis Juglaret at <a href="http://software.imdea.org/~bkoepf/FCS15/">FCS 2015</a> (2015-07-12)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
     <ul style="font-size: small">
 
