--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ MPRI website</a>.</p>
       system, and programming language (team effort)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="http://www.crash-safe.org/releases">Breeze: 
+    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
   a programming language with dynamic information flow control 
   and label-based access control</a> (with
   Michael Greenberg, Ben Karel,  Benoît Montagu,
