--- a/index.html
+++ b/index.html
@@ -195,19 +195,24 @@ MPRI website</a>.</p>
 <p>For a complete list of my publications please look <a href="publications.html">here</a><!--<br/>-->
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
-
   <li style="margin-bottom: 1ex;">
-    Nikhil Swamy,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Chantal Keller,
-    Pierre-Yves Strub,
-    Aseem Rastogi,
-    Antoine Delignat-Lavaud,
-    Karthikeyan Bhargavan, and
-    C&eacute;dric Fournet.
-    <b><a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></b>.
-    <!-- Submitted to ICFP 2015. -->
-    Draft of March 2015.
+  <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
+  <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
+  <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
+  <a href="">Aseem Rastogi</a>,
+  <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
+  Simon Forest,
+  <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a>,
+  <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
+  <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
+  <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
+  Jean-Karim Zinzindohoue.
+    <b><a href="https://www.fstar-lang.org/papers/popl2016/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    Submitted to POPL 2015.
+    Draft of July 2015.
+  <ul style="font-size: small">
+    <li>A previous draft of the paper was entitled <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -229,7 +234,7 @@ MPRI website</a>.</p>
     Nick Giannarakis,
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
-    Antal Spector-Zabusky,-
+    Antal Spector-Zabusky,
     Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. To appear in <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a>; <a href="https://www.seas.upenn.edu/~aarthur/micro-policies-full.pdf">Long version</a></li>
