--- a/index.html
+++ b/index.html
@@ -196,23 +196,34 @@ MPRI website</a>.</p>
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-  <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
-  <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
-  <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
-  <a href="">Aseem Rastogi</a>,
-  <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
-  Simon Forest,
-  <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a>,
-  <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
-  <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
-  <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
-  Jean-Karim Zinzindohoue.
+    <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
+    <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
+    <a href="">Aseem Rastogi</a>,
+    <a href="http://antoine.delignat-lavaud.fr/">Antoine Delignat-Lavaud</a>,
+    Simon Forest,
+    <a href="http://prosecco.gforge.inria.fr/personal/karthik/">Karthikeyan Bhargavan</a>,
+    <a href="http://research.microsoft.com/en-us/um/people/fournet/">C&eacute;dric Fournet</a>,
+    <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
+    <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
+    Jean-Karim Zinzindohoue.
     <b><a href="https://www.fstar-lang.org/papers/popl2016/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     Submitted to POPL 2016.
     Draft of July 2015.
   <ul style="font-size: small">
     <li>A previous draft of the paper was entitled <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Leonidas Lampropoulos,
+    Benjamin C. Pierce,
+    C&#259;t&#259;lin Hri&#355;cu,
+    John Hughes,
+    Zoe Paraskevopoulou,
+    Li-yao Xia.
+    Making Our Own Luck: A Language For Random Generators.
+    Submitted to POPL 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
