--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ MPRI website</a>.</p>
     <a href="http://www.strub.nu/">Pierre-Yves Strub</a>,
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
     Jean-Karim Zinzindohoue.
-    <b><a href="https://www.fstar-lang.org/papers/popl2016/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     Submitted to POPL 2016.
     Draft of July 2015.
   <ul style="font-size: small">
