--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@ MPRI website</a>.</p>
   </ul>
   </li>
 
-<!--
   <li style="margin-bottom: 1ex;">
     Leonidas Lampropoulos,
     Benjamin C. Pierce,
@@ -223,10 +222,9 @@ MPRI website</a>.</p>
     John Hughes,
     Zoe Paraskevopoulou,
     Li-yao Xia.
-    Making Our Own Luck: A Language For Random Generators.
-    Submitted to POPL 2016.
+    <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">Making Our Own Luck: A Language For Random Generators.</a></b>
+    Submitted to POPL 2016. Draft of July 2015.
   </li>
--->
 
   <li style="margin-bottom: 1ex;">
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
