--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Secure Compilation Using Micro-Policies</em>
     <ul style="font-size: small">
 
-      <li><b>Upcoming:</b> Talk by Yannis Juglaret at <a href="http://software.imdea.org/~bkoepf/FCS15/">FCS 2015</a>: <a href="publications/micro-policies-fcs.pdf">extended abstract</a> (2015-07-13)</li>
+      <li><b>Recent:</b> Talk by Yannis Juglaret at <a href="http://software.imdea.org/~bkoepf/FCS15/">FCS 2015</a>: <a href="publications/micro-policies-fcs.pdf">extended abstract</a> (2015-07-13)</li>
     </ul>
   </li>
 
@@ -364,7 +364,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
 
-      <li><b>Upcoming:</b> Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>: <a href="talks/Micro-Policies-PLAS.pdf">slides</a> (2015-07-06)</li>
+      <li><b>Recent:</b> Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>: <a href="talks/Micro-Policies-PLAS.pdf">slides</a> (2015-07-06)</li>
 
       <li><a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes Seminar on Formal Methods and Security</a>: <a href="talks/Micro-Policies-Rennes.pdf">slides</a> (2015-06-19)</li>
 
