--- a/index.html
+++ b/index.html
@@ -340,10 +340,6 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Secure Compilation Using Micro-Policies</em>
     <ul style="font-size: small">
 
-      <li><b>Recent:</b> Talk by Yannis Juglaret at <a href="http://software.imdea.org/~bkoepf/FCS15/">FCS 2015</a>: <a href="publications/micro-policies-fcs.pdf">extended abstract</a> (2015-07-13)</li>
-    </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
     <ul style="font-size: small">
 
@@ -361,6 +357,10 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
+  <li><b>Recent:</b> Talk by Yannis Juglaret at <a href="http://software.imdea.org/~bkoepf/FCS15/">FCS 2015</a>: <a href="publications/micro-policies-fcs.pdf">extended abstract</a>, <a href="talks/Secure-Compilation-FCS-2015.pdf">slides</a> (2015-07-13)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
 
@@ -370,7 +370,7 @@ MPRI website</a>.</p>
 
       <li>HP Labs - Inria seminar: <a href="talks/Micro-Policies-HP-Inria.pdf">slides</a> (2015-05-21)</li>
       <li>Inria Prosecco evaluation: <a href="talks/Micro-Policies-Prosecco-eval.pdf">slides</a> (2015-03-20)</li>
-      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">FCS-FCC</a>: <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-2014-07-18.html#talk:2906">abstract</a>, <a href="http://software.imdea.org/~bkoepf/FCS-FCC14/paper%206.pdf">extended abstract</a>, <a href="talks/Micro-Policies-FCS.pdf">slides</a> (2014-07-18)</li>
+      <li><a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-program.html#talk:2906">FCS-FCC</a>: <a href="http://www.easychair.org/smart-program/VSL2014/FCSFCC-2014-07-18.html#talk:2906">abstract</a>, <a href="http://software.imdea.org/~bkoepf/FCS-FCC14/paper%206.pdf">extended abstract</a>, <a href="talks/Micro-Policies-FCS-2014.pdf">slides</a> (2014-07-18)</li>
       <li><a href="http://csl.cs.uni-saarland.de/grsrd/2014/">Grande Region Security and Reliability Day</a> in Saarbrücken: <a href="talks/Micro-Policies-GRSRD.pdf">slides</a> (2014-03-12)</li>
     </ul>
   </li>
