--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
 
-      <li><b>Upcoming:</b> <a href="http://research.microsoft.com/en-us/labs/redmond/">Microsoft Research Redmond</a>: <a href="talks/Micro-Policies-MSR-Redmond.pdf">slides</a> (2015-08-12)</li>
+      <li><b>Recent:</b> <a href="http://research.microsoft.com/en-us/labs/redmond/">Microsoft Research Redmond</a>: <a href="talks/Micro-Policies-MSR-Redmond.pdf">slides</a> (2015-08-12)</li>
 
       <li>Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>: <a href="talks/Micro-Policies-PLAS.pdf">slides</a> (2015-07-06)</li>
 
