--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
-  <li style="margin-bottom: 1ex;">Visiting <a href="http://research.microsoft.com/en-us/groups/rise/">MSR Redmond</a> and <a href="https://www.cs.washington.edu/">University of Washington</a>, 10 - 28 August 2015
+  <li style="margin-bottom: 1ex;">Visiting <a href="http://research.microsoft.com/en-us/groups/rise/">MSR Redmond</a> and <a href="https://www.cs.washington.edu/research/plse/people">University of Washington</a>, 10 - 28 August 2015
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://2015.ecoop.org/event/plas-2015-papers-micro-policies-formally-verified-tag-based-security-monitors">Invited talk on Micro-Policies</a> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>, 6 July 2015
   </li>
@@ -512,10 +512,10 @@ MPRI website</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Simon Forest
+  <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
     <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
-      <a href="students/topics/2015/fstar.pdf">Metatheory of &mu;F* in F*</a>
+      <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Metatheory of &mu;F* in F*</a>
     </li>
   </ul>
   </li>
