--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
     <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
-      <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Metatheory of &mu;F* in F*</a>
+      <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
   </li>
