--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/yjugl">Yannis Juglaret</a>
   <ul>
-    <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:<br/>
       <a href="students/topics/2015/micro-policies-yannis.pdf">Efficient Secure Compilation Using Micro-Policies</a>
     </li>
   </ul>
@@ -506,7 +506,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
   <ul>
-    <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-04 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Internship at Inria, 2015-04 to 2015-08:<br/>
       <a href="students/topics/2015/quick-chick-li-yao.pdf">Optimal Parameter Selection for Property-Based Testing</a>
     </li>
   </ul>
@@ -514,7 +514,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
-    <li style="margin-top: 1ex;">Ongoing Internship at Inria, 2015-03 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:<br/>
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
