--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2015-04 to 2015-08:<br/>
-      <a href="students/topics/2015/quick-chick-li-yao.pdf">Optimal Parameter Selection for Property-Based Testing</a>
+      <a href="students/topics/2015/quick-chick-li-yao.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
   </li>
