--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="https://github.com/yjugl">Yannis Juglaret</a>
   <ul>
     <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:<br/>
-      <a href="students/topics/2015/micro-policies-yannis.pdf">Efficient Secure Compilation Using Micro-Policies</a>
+      <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
     </li>
   </ul>
   </li>
