--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:<br/>
+    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
