--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex"><b>Upcoming:</b> <a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03 at 14:00)</li>
+  <li style="margin-bottom: 1ex"><b>Upcoming:</b> <a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03 at 14:00)</li>
 
-  <li style="margin-bottom: 1ex"><b>Upcoming:</b> <a href="">Dependent types, effects, and efficient verification conditions in F* </a> at <a href="http://users-cs.au.dk/birke/hope-2015/">HOPE 2015</a> (2015-08-30 at 14:00)</li>
+  <li style="margin-bottom: 1ex"><b>Upcoming:</b> <a href="">Dependent types, effects, and efficient verification conditions in F* </a><br/> at <a href="http://users-cs.au.dk/birke/hope-2015/">HOPE 2015</a> (2015-08-30 at 14:00)</li>
 
   <li style="margin-bottom: 1ex;"><em>Secure Compilation Using Micro-Policies</em>
     <ul style="font-size: small">
