--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
     <ul style="font-size: small">
 
-      <li><b>Upcoming:</b> <a href="http://cufp.org/2015/">
+      <li><b>Recent:</b> <a href="http://cufp.org/2015/">
           Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
       </li>
 
@@ -358,9 +358,7 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex"><b>Upcoming:</b> <a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03 at 14:00)</li>
-
-  <li style="margin-bottom: 1ex"><b>Upcoming:</b> <a href="">Dependent types, effects, and efficient verification conditions in F* </a><br/> at <a href="http://users-cs.au.dk/birke/hope-2015/">HOPE 2015</a> (2015-08-30 at 14:00)</li>
+  <li style="margin-bottom: 1ex"><b>Recent:</b> <a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03): <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a></li>
 
   <li style="margin-bottom: 1ex;"><em>Secure Compilation Using Micro-Policies</em>
     <ul style="font-size: small">
@@ -410,11 +408,6 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">Type Systems for Security Verification</a></b>, Lecture, Saarland University, 16-27 March 2015
   </li>
-<!--
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://sps.cs.uni-saarland.de/teaching/14WS/security-verification/index.html">Type Systems for Security Verification</a></b>
-    - Block Lecture, Saarland University, 16-27 March 2015<br/>
-  </li>
--->
   <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~bcpierce/courses/670Fall12/">Advanced Martial Arts in Coq</a></b>
     - CIS670 at UPenn, Fall 2012.
     Guest lecturer for 2 lectures:
