--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ MPRI website</a>.</p>
       <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
     </li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
   <ul>
@@ -542,7 +542,7 @@ MPRI website</a>.</p>
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
     </li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a>
   <ul>
