--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ MPRI website</a>.</p>
       <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a>
   <ul>
