--- a/index.html
+++ b/index.html
@@ -107,11 +107,14 @@ internships, MSc and PhD theses, etc. Here are some potential topics:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: SMT-Based Verification for ML</a>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: Verification system for ML and proof assistant</a>
 (<a href="http://www.fstar-lang.org/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
- <a href="https://www.fstar-lang.org/tutorial">tutorial</a>)</li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">QuickChick: Property-Based Testing for Coq</a> (<a href="https://github.com/QuickChick">code</a>)
+ <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
+ <a href="https://www.fstar-lang.org/papers/mumon/">draft paper</a>)</li>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">Luck: A Language For Random Generators</a>
+ (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">draft paper</a>)
+
 <!--
   <ul>
   <li><a href="https://www.inria.fr/en/institute/recruitment/offers/phd/campaign-2014/(view)/details.html?id=PNGFK026203F3VBQB6G68LOE1&LOV5=4509&LG=EN&Resultsperpage=20&nPostingID=8363&nPostingTargetID=14104&option=52&sort=DESC&nDepartmentID=28"><strong>You can apply for an Inria-funded PhD fellowship on this topic!</strong></a></li>
