--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Research Cambridge</a>.</p>
 <h2 id="students">Searching for Students</h2>
 <p style="width:42em; text-align: left">
 I am looking for talented, highly motivated students, for research
-internships, MSc and PhD theses, etc. Here are two potential topics:
+internships, MSc and PhD theses, etc. Here are two potential projects:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
