--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a student could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/papers/mumon/">draft paper</a>)</li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">Luck: A Language For Random Generators</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">Luck: A Language For Property-Based Generators</a>
  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">draft paper</a>)
 
 <!--
