--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a student could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/papers/mumon/">draft paper</a>)</li>
-  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">Luck: A Language For Property-Based Generators</a>
+  <li style="margin-bottom: 1ex;"><a href="students/topics/2015/quick-chick.pdf">Luck: A language for property-based generators</a>
  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">draft paper</a>)
 
 <!--
@@ -228,7 +228,7 @@ MPRI website</a>.</p>
     John Hughes,
     Zoe Paraskevopoulou,
     Li-yao Xia.
-    <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">Making Our Own Luck: A Language For Random Generators.</a></b>
+    <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
     Submitted to POPL 2016. Draft of July 2015.
   </li>
 
