--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a student could contribute:
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: Verification system for ML and proof assistant</a>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2015/fstar.pdf">F*: Verification system for ML turned proof assistant</a>
 (<a href="http://www.fstar-lang.org/">website</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
