--- a/index.html
+++ b/index.html
@@ -576,15 +576,21 @@ MPRI website</a>.</p>
 <h2 id="tools">Software</h2>
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://www.fstar-lang.org">F*:
-      Next Generation Security Type System</a>
-      (with Karthik Bhargavan, Cédric Fournet, Chantal Keller,
-       Pierre-Yves Strub, Nikhil Swamy, and others)</li>
+    <a href="https://www.fstar-lang.org">F*: Verification system for
+      ML turned proof assistant</a> (with Nikhil Swamy, Chantal
+      Keller, Aseem Rastogi, Antoine Delignat-Lavaud, Simon Forest,
+      Karthik Bhargavan, Cédric Fournet, and others)</li>
+
+  <li style="margin-bottom: 1ex;">
+    <a href="">Luck: A Domain Specific Language For Property-Based Generators</a>
+    (with Leonidas Lampropoulos, Li-yao Xia, Benjamin C. Pierce,
+     John Hughes, and Zoe Paraskevopoulou)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/QuickChick">QuickChick:
-      Property-Based Testing Plugin for Coq</a>
-      (with Maxime Dénès, John Hughes, Leonidas Lampropoulos, Zoe Paraskevopoulou,
+      Property-based testing plugin for Coq, including 
+      a foundational verification framework for testing code</a>
+      (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
        and Benjamin C. Pierce)</li>
 
   <li style="margin-bottom: 1ex;">
