--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ MPRI website</a>.</p>
     <a href="http://www.crash-safe.org">CRASH/SAFE</a>:
       clean-slate co-design of a secure
       architecture, including novel hardware, operating
-      system, and programming language (team effort)</li>
+      system, and programming language (~40 people team)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
